# WaveSink

./: .gitignore  CMakeLists.txt  PRIVACY.md  README.md  compile.bat  installer.iss  run.bat
src/: AudioController.cpp  AudioController.h  AudioRouter.cpp  AudioRouter.h  Scanner.cpp  Scanner.h  main.cpp
src/gui/: MainWindow.cpp  MainWindow.h  SinkItemWidget.cpp  SinkItemWidget.h  SinkListWidget.cpp  SinkListWidget.h
